# workchat-mcp

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION.md  PROJECT_README.md  README.md  alembic.ini  docker-compose.yml  main.py  mkdocs.yml  prompt_plan.md  pyproject.toml  spec.md  test_simple_sse.py  test_sse_manual.py  workchat.db
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 1f8db712882f_add_unique_constraint_for_channel_name_.py  422247f08075_add_org_id_to_audit_log_table_for_.py  4984b962e52c_temporarily_disable_fts_triggers.py  7caaf6dd0cce_add_authentication_fields_to_user_table.py  b61baab4c604_add_org_and_user_models.py  b8e0715eeaba_add_channel_model.py  c4f007eb890f_add_auditlog_table_for_change_tracking.py  c858cce272e8_add_message_model_for_threads_and_.py  d4a7f8e1c2b3_add_fts5_search_for_messages.py  f7298981ad16_add_authentication_fields_to_user_table.py  f72b0b971ce8_add_self_reference_foreign_key_for_.py
docs/: architecture.md  dev-onboarding-test.md  index.md  quickstart.md
docs/adr/: index.md
frontend/: README.md  index.html  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
tests/: __init__.py  conftest.py  test_app.py  test_audit.py  test_auth.py  test_channels.py  test_events.py  test_events_simple.py  test_mcp.py  test_messages.py  test_models.py  test_p5_basic.py  test_p6_basic.py  test_search.py
workchat/: __init__.py  app.py  database.py  events.py  events_simple.py
workchat/api/: __init__.py  audit.py  channels.py  messages.py  (+1 more)
(+36 files in other folders)
